--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <%= label f, :content, class: "control-label" %>
-    <%= textarea f, :content, class: "form-control" %>
+    <%= textarea f, :content, id: "markdownEditor" %>
     <%= error_tag f, :content %>
   </div>
 
